[KL-411] fix media modal z-index

--- a/src/app/announcement/announcement.component.scss
+++ b/src/app/announcement/announcement.component.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   background-color: #259B9A;
-  z-index: 20;
+  z-index: $zIndexAnnouncement;
 
   &__text {
     margin: 0;
